// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cars data retrieval should get cars from db with filter, pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": 1753520,
      "dkn": "СА5375ХМ",
      "id": 1490009,
      "mark_name": "Volkswagen",
      "model_name": "Golf",
      "person_id": 1753520,
      "produce_year": 1994,
      "rama": "WVWZZZ1HZRW464701",
    },
    Object {
      "company_id": 1556492,
      "dkn": "СА8652ХВ",
      "id": 2134851,
      "mark_name": "Volkswagen",
      "model_name": "Golf",
      "person_id": 1556492,
      "produce_year": 2002,
      "rama": "WVWZZZ1JZ1B173308",
    },
    Object {
      "company_id": 1468442,
      "dkn": "СА2525ВК",
      "id": 2143856,
      "mark_name": "Toyota",
      "model_name": "RAV-4",
      "person_id": 1468442,
      "produce_year": 2004,
      "rama": "JTEHG20V306040443",
    },
    Object {
      "company_id": 1552797,
      "dkn": "СА8346ХВ",
      "id": 2168514,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": 1552797,
      "produce_year": 2004,
      "rama": "WAUZZZ4E94N020180",
    },
    Object {
      "company_id": 112645,
      "dkn": "СА8393ХВ",
      "id": 2169761,
      "mark_name": "Audi",
      "model_name": "A6",
      "person_id": 112645,
      "produce_year": 2000,
      "rama": "WAUZZZ4BZYN098915",
    },
    Object {
      "company_id": 264536,
      "dkn": "СА1309А",
      "id": 2189941,
      "mark_name": "0",
      "model_name": "Друг ...",
      "person_id": 264536,
      "produce_year": 2001,
      "rama": "JYARP041000004589",
    },
    Object {
      "company_id": 1582154,
      "dkn": "СА0218ХН",
      "id": 2312244,
      "mark_name": "Volkswagen",
      "model_name": "Caddy",
      "person_id": 1582154,
      "produce_year": 2007,
      "rama": "WV2ZZZ2KZ8X059506",
    },
    Object {
      "company_id": 92082,
      "dkn": "СА7568ХН",
      "id": 2357383,
      "mark_name": "Citroen",
      "model_name": "Друг ...",
      "person_id": 92082,
      "produce_year": 2005,
      "rama": "VF7LC9HXC74172495",
    },
    Object {
      "company_id": 1815922,
      "dkn": "СА1453ХР",
      "id": 2378536,
      "mark_name": "BMW",
      "model_name": "Друг ...",
      "person_id": 1815922,
      "produce_year": 1991,
      "rama": "WBACA31030EG37316",
    },
    Object {
      "company_id": 1518384,
      "dkn": "СА5376ХР",
      "id": 2401528,
      "mark_name": "Seat",
      "model_name": "Ibiza",
      "person_id": 1518384,
      "produce_year": 1995,
      "rama": "VSSZZZ6KZZR737515",
    },
  ],
  "total": 18,
}
`;

exports[`Test cars data retrieval should get cars from db with id 1`] = `
Object {
  "data": Object {
    "company_id": null,
    "dkn": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "person_id": null,
    "produce_year": 1992,
    "rama": "YGHJHKLLOLIHGHG",
  },
}
`;

exports[`Test cars data retrieval should get cars from db with ids 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
}
`;

exports[`Test cars data retrieval should get cars from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test cars data retrieval should get cars from db with pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test companies data retrieval should get companies from db with filter, pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "131304899",
      "car_ids": Array [
        6003,
        6157,
        7368,
        534737,
        828833,
        829572,
        829929,
        1528401,
        1564742,
        1623274,
        1651107,
        1655869,
        1661547,
        1674812,
        1676459,
        1687766,
        1746879,
        1749209,
        1755759,
        1778061,
        1791273,
        1808684,
        1817960,
        1837693,
        1837696,
        1841973,
        1886048,
        1905375,
        1926652,
        2013426,
        2110795,
        2114331,
        2207729,
        2234344,
        2261575,
        2316075,
        2325492,
        2433843,
        2465044,
        2500953,
        2542927,
        2603590,
        2621869,
        2952511,
      ],
      "city": "СОФИЯ",
      "client_name": "СИ ЕФ ЕМ ООД  ",
      "floor": 0,
      "id": 9251,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": 0,
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1151,
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "131022750",
      "car_ids": Array [
        4777,
        828786,
        1514579,
        1561717,
        2673188,
        3006613,
      ],
      "city": "СОФИЯ",
      "client_name": "ДЕНТАТЕХНИКА ЕООД  ",
      "floor": 0,
      "id": 9551,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "Андрей Ляпчев",
      "street_no": "66",
      "vhod": "0",
    },
    Object {
      "apartment": "секция 70",
      "blok": "0",
      "bulstat": "131197828",
      "car_ids": Array [],
      "city": "СОФИЯ",
      "client_name": "Отто Интернешънъл България ООД  ",
      "floor": 0,
      "id": 9652,
      "mobile": "+359886086571",
      "municipality_name": "Столична",
      "phone": "",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "Манастирски ливади - Б",
      "street_no": "65",
      "vhod": "0",
    },
    Object {
      "apartment": 27,
      "blok": "1",
      "bulstat": "130988423",
      "car_ids": Array [],
      "city": "СОФИЯ",
      "client_name": "\\" Мечкуеви Ко \\" ООД  ",
      "floor": 2,
      "id": 9851,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "Незабравка",
      "street_no": "1",
      "vhod": "Б",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "130936974",
      "car_ids": Array [
        63348,
        64390,
        69428,
        76290,
        76487,
        77326,
        86243,
        92656,
        100316,
        100523,
        105616,
        118269,
        152481,
        161109,
        161568,
        162780,
        194046,
        194079,
        194114,
        230485,
        264610,
        264950,
        296960,
        296966,
        296979,
        296988,
        296991,
        297026,
        297037,
        297038,
        297040,
        297045,
        297057,
        297061,
        297065,
        297067,
        297069,
        297079,
        297082,
        297084,
        297086,
        297087,
        297091,
        297095,
        297099,
        297100,
        297105,
        297108,
        297111,
        297120,
        297123,
        297128,
        297143,
        297146,
        297148,
        297151,
        297157,
        297159,
        297163,
        297164,
        297168,
        297173,
        297179,
        297184,
        297186,
        297190,
        297191,
        297192,
        297203,
        297209,
        297212,
        297214,
        297215,
        297216,
        297217,
        297221,
        297227,
        297229,
        297230,
        297233,
        297235,
        297239,
        297240,
        297242,
        297244,
        297246,
        297253,
        297254,
        297261,
        297266,
        297267,
        297269,
        297271,
        297272,
        297273,
        297276,
        297277,
        297280,
        297281,
        297285,
        297289,
        297292,
        297295,
        297296,
        297297,
        297303,
        297304,
        297305,
        297307,
        297308,
        297310,
        297314,
        297316,
        297317,
        297318,
        297320,
        297321,
        297323,
        297327,
        297329,
        297334,
        297339,
        297340,
        297341,
        297342,
        297349,
        297351,
        297361,
        297371,
        297379,
        297382,
        297384,
        297394,
        297399,
        297407,
        297408,
        297409,
        297414,
        297419,
        297423,
        297428,
        297429,
        297434,
        297436,
        297437,
        297440,
        297441,
        297553,
        297555,
        297556,
        297560,
        297566,
        297576,
        297579,
        297582,
        297591,
        297599,
        297605,
        297606,
        299700,
        300099,
        302123,
        305465,
        306705,
        310018,
        310341,
        310516,
        310588,
        310626,
        310629,
        310641,
        310646,
        310657,
        310659,
        310708,
        310751,
        310752,
        310762,
        310763,
        310777,
        310863,
        313508,
        314555,
        316617,
        325499,
        326226,
        326472,
        326547,
        328993,
        462986,
        463870,
        496483,
        496574,
        496588,
        496612,
        496660,
        496750,
        496758,
        496785,
        496902,
        497088,
        497190,
        497222,
        497263,
        497334,
        497438,
        497440,
        497443,
        497534,
        497553,
        497829,
        497866,
        498617,
        504172,
        504940,
        505822,
        512646,
        516902,
        519187,
        519209,
        520886,
        521839,
        522859,
        523489,
        523769,
        524940,
        525636,
        527734,
        527945,
        529411,
        531346,
        531924,
        532172,
        533083,
        533733,
        534390,
        541395,
        541474,
        541737,
        541767,
        541825,
        541857,
        541965,
        542010,
        544598,
        545168,
        545222,
        545799,
        545801,
        546470,
        551630,
        553504,
        659364,
        659402,
        659505,
        659506,
        659512,
        659729,
        660139,
        660317,
        660321,
        660575,
        660598,
        660804,
        661040,
        661401,
        661641,
        661642,
        661730,
        662080,
        662090,
        662620,
        662638,
        662639,
        662722,
        663273,
        725390,
        725486,
        726509,
        763626,
        763627,
        763628,
        763630,
        763631,
        763632,
        763635,
        763637,
        763638,
        763639,
        763640,
        763641,
        763642,
        763643,
        763644,
        763645,
        763646,
        763647,
        763648,
        763649,
        763650,
        763651,
        763652,
        763654,
        763655,
        763656,
        763657,
        763658,
        763659,
        763661,
        763662,
        763663,
        763664,
        763665,
        763666,
        763667,
        763669,
        763670,
        763671,
        763673,
        763674,
        763675,
        763676,
        763677,
        763678,
        763680,
        763681,
        763682,
        763683,
        763684,
        763685,
        763687,
        763690,
        763692,
        763693,
        763694,
        763696,
        763697,
        763699,
        763701,
        763703,
        763704,
        763706,
        763707,
        763708,
        763709,
        763710,
        763711,
        763712,
        763713,
        763714,
        763716,
        763717,
        763718,
        763719,
        763720,
        763721,
        763723,
        763724,
        763725,
        763727,
        763728,
        763730,
        763731,
        763732,
        763733,
        763734,
        763735,
        763737,
        763738,
        763739,
        763741,
        763742,
        763743,
        763744,
        763745,
        763746,
        763747,
        763748,
        763749,
        763750,
        763752,
        763753,
        763754,
        763755,
        763756,
        763757,
        763760,
        763762,
        763763,
        763766,
        763769,
        763770,
        763771,
        763772,
        763773,
        763774,
        763775,
        763776,
        763778,
        763779,
        763780,
        763781,
        763782,
        763783,
        763784,
        763787,
        763788,
        763790,
        763791,
        763792,
        763793,
        763794,
        763797,
        763798,
        763801,
        763802,
        763803,
        763805,
        763806,
        763807,
        763808,
        763809,
        763810,
        764170,
        828871,
        828937,
        829121,
        829158,
        829312,
        829333,
        829361,
        829574,
        831251,
        831253,
        831262,
        831273,
        831287,
        831296,
        831298,
        831301,
        831303,
        831305,
        831312,
        831328,
        831330,
        831334,
        831356,
        831359,
        831360,
        831361,
        831366,
        831373,
        831386,
        831387,
        836041,
        836782,
        840641,
        840644,
        843781,
        846768,
        848609,
        854870,
        1009495,
        1011048,
        1011050,
        1011052,
        1011064,
        1011065,
        1011084,
        1011088,
        1011100,
        1011110,
        1012565,
        1013229,
        1014341,
        1020337,
        1021366,
        1023608,
        1126721,
        1126732,
        1127408,
        1193308,
        1193570,
        1193775,
        1194451,
        1229723,
        1229817,
        1230152,
        1230167,
        1230465,
        1230714,
        1231574,
        1232804,
        1236356,
        1245484,
        1245543,
        1246393,
        1247799,
        1248592,
        1251347,
        1252636,
        1287799,
        1288612,
        1290154,
        1293646,
        1293923,
        1390663,
        1393835,
        1393836,
        1393839,
        1393849,
        1393854,
        1393857,
        1393859,
        1393895,
        1395779,
        1428489,
        1470943,
        1471439,
        1473216,
        1487162,
        1505842,
        1547258,
        1547398,
        1556545,
        1561702,
        1582637,
        1594847,
        1611391,
        1649046,
        1655684,
        1687956,
        1699664,
        1712268,
        1716508,
        1723893,
        1741208,
        1749546,
        1766040,
        1780949,
        1800087,
        1801748,
        1817081,
        1817944,
        1819006,
        1827267,
        1842106,
        1861193,
        1861222,
        1861517,
        1879786,
        1896480,
        1899589,
        1923331,
        1923664,
        1923666,
        1923668,
        1923672,
        1923714,
        1923806,
        1924111,
        1924122,
        1924176,
        1924373,
        1924619,
        1924775,
        1924850,
        1924931,
        1924999,
        1925255,
        1925430,
        1925434,
        1925437,
        1925477,
        1925628,
        1925872,
        1926270,
        1926751,
        1926813,
        1926934,
        1926974,
        1927236,
        1927318,
        1927436,
        1927596,
        1927602,
        1927618,
        1928143,
        1928304,
        1928440,
        1928442,
        1928445,
        1928469,
        1928489,
        1928858,
        1929002,
        1929245,
        1929298,
        1930109,
        1930127,
        1930178,
        1930252,
        1930284,
        1930455,
        1930459,
        1930510,
        1930512,
        1930522,
        1930533,
        1930561,
        1930596,
        1930627,
        1930628,
        1930629,
        1930642,
        1930657,
        1930689,
        1930690,
        1930706,
        1930742,
        1930743,
        1930810,
        1930814,
        1930817,
        1930818,
        1930828,
        1930830,
        1930843,
        1930845,
        1930846,
        1930847,
        1930850,
        1930907,
        1938460,
        2067628,
        2070968,
        2081522,
        2084510,
        2088715,
        2089170,
        2100196,
        2106491,
        2106520,
        2106532,
        2111727,
        2112518,
        2112928,
        2118330,
        2122007,
        2122042,
        2122310,
        2126736,
        2128473,
        2129035,
        2129056,
        2129070,
        2129122,
        2129169,
        2135001,
        2135031,
        2135046,
        2135207,
        2135228,
        2140246,
        2144406,
        2145373,
        2150517,
        2155457,
        2170271,
        2171727,
        2178006,
        2178060,
        2182620,
        2188696,
        2190908,
        2199310,
        2200341,
        2200797,
        2202895,
        2203551,
        2203562,
        2210959,
        2217112,
        2233315,
        2236026,
        2238961,
        2240502,
        2242414,
        2250635,
        2257688,
        2257970,
        2258008,
        2260214,
        2266018,
        2266165,
        2269091,
        2274815,
        2279861,
        2302696,
        2314719,
        2347301,
        2362023,
        2362052,
        2367393,
        2367583,
        2403636,
        2406154,
        2408572,
        2415311,
        2419608,
        2423478,
        2455892,
        2471164,
        2499058,
        2526076,
        2528427,
        2530547,
        2538249,
        2540189,
        2545660,
        2548223,
        2555172,
        2557567,
        2558478,
        2570720,
        2574606,
        2577280,
        2580410,
        2583961,
        2598908,
        2614901,
        2615693,
        2625483,
        2625821,
        2642471,
        2646101,
        2652721,
        2657094,
        2662406,
        2662868,
        2673091,
        2686820,
        2689983,
        2692500,
        2708845,
        2712497,
        2729572,
        2744161,
        2755131,
        2756490,
        2758245,
        2761566,
        2779363,
        2779379,
        2781687,
        2795642,
        2809323,
        2820274,
        2843340,
        2845279,
        2845748,
        2856789,
        2856883,
        2857138,
        2860998,
        2861629,
        2870360,
        2892750,
        2949648,
        2964315,
        2987448,
        2988966,
        3052700,
        3071420,
      ],
      "city": "СОФИЯ",
      "client_name": "ИНТЕРЛИЙЗ АУТО ЕАД  ",
      "floor": 0,
      "id": 9852,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "бул. ЦАРИГРАДСКО ШОСЕ",
      "street_no": "135А",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "131097906",
      "car_ids": Array [
        5161,
        1755766,
      ],
      "city": "СОФИЯ",
      "client_name": "ЛАЙЪНС  ЕЛЕКТРОНИКС БЪЛГАРИЯ  ",
      "floor": 0,
      "id": 10002,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "ул.Гурко №62, вх.А, ет.1",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "130999394",
      "car_ids": Array [],
      "city": "СОФИЯ",
      "client_name": "\\" Трите К-та \\" ООД  ",
      "floor": 0,
      "id": 10007,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "Кирил Лозанов",
      "street_name": "Бузлуджа",
      "street_no": "53",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "121590369",
      "car_ids": Array [
        5171,
        5914,
        5916,
      ],
      "city": "СОФИЯ",
      "client_name": "ЛОЗЕНЕЦ КОНСУЛТ АД  ",
      "floor": 0,
      "id": 10011,
      "mobile": "0882 030401",
      "municipality_name": "Столична",
      "phone": "",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "КЮСТЕНДИЛ",
      "street_no": "21",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "000776071",
      "car_ids": Array [
        840990,
        1929180,
        2822810,
        3010804,
      ],
      "city": "СОФИЯ",
      "client_name": "ОБЩИНА БОЖУРИЩЕ    ",
      "floor": 0,
      "id": 10012,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "БУЛ.ЕВРОПА 85",
      "street_no": "0",
      "vhod": "0",
    },
  ],
  "total": 78689,
}
`;

exports[`Test companies data retrieval should get companies from db with id 1`] = `
Object {
  "data": Object {
    "apartment": 0,
    "blok": "0",
    "bulstat": "175153616",
    "car_ids": Array [
      6001,
      1687957,
      1863595,
    ],
    "city": "ЛОЗЕН",
    "client_name": "Бонев Транс ЕООД  ",
    "floor": 0,
    "id": 9351,
    "mobile": "0",
    "municipality_name": "Столична",
    "phone": "0",
    "postcode": 1151,
    "region_name": "София (столица)",
    "representative": "Генади Стефанов Бонев",
    "street_name": "ЯНКО ПАНАЙОТОВ",
    "street_no": "28",
    "vhod": "0",
  },
}
`;

exports[`Test companies data retrieval should get companies from db with ids 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": 0,
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1151,
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
    Object {
      "apartment": 27,
      "blok": "1",
      "bulstat": "130988423",
      "car_ids": Array [],
      "city": "СОФИЯ",
      "client_name": "\\" Мечкуеви Ко \\" ООД  ",
      "floor": 2,
      "id": 9851,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "Незабравка",
      "street_no": "1",
      "vhod": "Б",
    },
  ],
}
`;

exports[`Test companies data retrieval should get companies from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "131304899",
      "car_ids": Array [
        6003,
        6157,
        7368,
        534737,
        828833,
        829572,
        829929,
        1528401,
        1564742,
        1623274,
        1651107,
        1655869,
        1661547,
        1674812,
        1676459,
        1687766,
        1746879,
        1749209,
        1755759,
        1778061,
        1791273,
        1808684,
        1817960,
        1837693,
        1837696,
        1841973,
        1886048,
        1905375,
        1926652,
        2013426,
        2110795,
        2114331,
        2207729,
        2234344,
        2261575,
        2316075,
        2325492,
        2433843,
        2465044,
        2500953,
        2542927,
        2603590,
        2621869,
        2952511,
      ],
      "city": "СОФИЯ",
      "client_name": "СИ ЕФ ЕМ ООД  ",
      "floor": 0,
      "id": 9251,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": 0,
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1151,
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
  ],
  "total": 78689,
}
`;

exports[`Test companies data retrieval should get companies from db with pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "131304899",
      "car_ids": Array [
        6003,
        6157,
        7368,
        534737,
        828833,
        829572,
        829929,
        1528401,
        1564742,
        1623274,
        1651107,
        1655869,
        1661547,
        1674812,
        1676459,
        1687766,
        1746879,
        1749209,
        1755759,
        1778061,
        1791273,
        1808684,
        1817960,
        1837693,
        1837696,
        1841973,
        1886048,
        1905375,
        1926652,
        2013426,
        2110795,
        2114331,
        2207729,
        2234344,
        2261575,
        2316075,
        2325492,
        2433843,
        2465044,
        2500953,
        2542927,
        2603590,
        2621869,
        2952511,
      ],
      "city": "СОФИЯ",
      "client_name": "СИ ЕФ ЕМ ООД  ",
      "floor": 0,
      "id": 9251,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": 0,
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1151,
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
  ],
  "total": 78689,
}
`;

exports[`Test people data retrieval should get people from db with id 1`] = `
Object {
  "data": Object {
    "apartment": 2,
    "blok": "18",
    "car_ids": Array [],
    "city": "СИЛИСТРА",
    "client_name": "First Middle Last",
    "egn": "6310305565",
    "floor": 1,
    "id": 9219,
    "mobile": "0891043493",
    "municipality_name": "Силистра",
    "phone": "02830123",
    "postcode": 7500,
    "region_name": "СИЛИСТРА",
    "representative": "",
    "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
    "street_no": "",
    "vhod": "А",
  },
}
`;

exports[`Test people data retrieval should get people from db with ids 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 2,
      "blok": "18",
      "car_ids": Array [],
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "egn": "6310305565",
      "floor": 1,
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": 7500,
      "region_name": "СИЛИСТРА",
      "representative": "",
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vhod": "А",
    },
    Object {
      "apartment": 7,
      "blok": "9",
      "car_ids": Array [],
      "city": "СОФИЯ",
      "client_name": "Николинка Стефанова Цолова",
      "egn": "5507181593",
      "floor": 4,
      "id": 9451,
      "mobile": "0897527002",
      "municipality_name": "Столична",
      "phone": "0888998899",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "ЛЮБЛАНА",
      "street_no": "1",
      "vhod": "a",
    },
  ],
}
`;

exports[`Test people data retrieval should get people from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "car_ids": Array [],
      "city": "РУСЕ",
      "client_name": "Юрий Николов Величков",
      "egn": "6104266565",
      "floor": 1,
      "id": 9213,
      "mobile": "0889827210",
      "municipality_name": "Русе",
      "phone": "9294130",
      "postcode": 7000,
      "region_name": "РУСЕ",
      "representative": "",
      "street_name": "СЛАВЯНСКИ",
      "street_no": "14",
      "vhod": "1",
    },
    Object {
      "apartment": 2,
      "blok": "18",
      "car_ids": Array [],
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "egn": "6310305565",
      "floor": 1,
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": 7500,
      "region_name": "СИЛИСТРА",
      "representative": "",
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vhod": "А",
    },
  ],
  "total": 1030889,
}
`;

exports[`Test people data retrieval should get people from db with pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "car_ids": Array [],
      "city": "РУСЕ",
      "client_name": "Юрий Николов Величков",
      "egn": "6104266565",
      "floor": 1,
      "id": 9213,
      "mobile": "0889827210",
      "municipality_name": "Русе",
      "phone": "9294130",
      "postcode": 7000,
      "region_name": "РУСЕ",
      "representative": "",
      "street_name": "СЛАВЯНСКИ",
      "street_no": "14",
      "vhod": "1",
    },
    Object {
      "apartment": 2,
      "blok": "18",
      "car_ids": Array [],
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "egn": "6310305565",
      "floor": 1,
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": 7500,
      "region_name": "СИЛИСТРА",
      "representative": "",
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vhod": "А",
    },
  ],
  "total": 1030889,
}
`;
